crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_aa_gt_gen_1.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<aa>\"####)"
---
[
    Token {
        data: "aa",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "aa",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
