crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_ab_gt_gen_1.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<ab>\"####)"
---
[
    Token {
        data: "ab",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "ab",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
